feat: SEO basics with meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Orkutfolio - Gabriel Soares</title>
   <link rel="shortcut icon" href="./src/assets/images/orkutfolioFavicon.png" type="image/png">
+
+  <!-- SEO -->
+  <meta name="author" content="Gabriel Soares">
+  <meta name="description" content="Portfólio para Desenvolvedor Front End inspirado na estética do Orkut">
+  <meta name="keywords" content="Front End, React, Portfólio, Gabriel Soares, Orkutfolio">
+
   <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
